Split login url up in two

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 DATABASE_URL=postgresql://pls4:pls4@localhost:5432/pls4?sslmode=disable
-LOGIN_URL=http://localhost:7002
+LOGIN_FRONTEND_URL=http://localhost:7002
+LOGIN_API_URL=http://localhost:7002
 LOGIN_API_KEY=yeet
 HODIS_URL=https://hodis.datasektionen.se
